[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["brian kitano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
transformers = "^4.41.2"
jupyter = "^1.0.0"
accelerate = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
